Level 3 added, overall alignment fixes, new tutorial screen.

--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,12 @@ body {
 
 #menu-screen {
   display: none;
+  margin-top: 100px;
 }
 
 #menu-screen-prompt {
   display: flex;
-  margin-top: 250px;
+  margin-top: 50px;
   color: #a9a9a9;
   font-size: 30px;
 }
@@ -64,7 +65,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 10px;
 }
 
 #tutorial-screen h1 {
@@ -159,7 +160,7 @@ body {
   width: 1100px;
   height: 300px;
   margin-right: 1px;
-  margin-top: 25px;
+  margin-top: 10px;
   color: #a9a9a9;
   font-size: 30px;
 }
@@ -203,7 +204,7 @@ body {
 #game-levelone {
   display: none;
   white-space: pre;
-  margin-top: 200px;
+  margin-top: 100px;
   font-size: 25px;
   flex-direction: column;
   color: white;
